# ocloudview-atp

./: .gitignore  CHANGELOG.md  Cargo.toml  GLIBC_COMPATIBILITY_GUIDE.md  PORTABLE_BUILD_GUIDE.md  README.md  TEST_CONFIG_README.md  TODO.md  install.sh  test.toml  test.toml.example
.claude/: mcp.json
atp-application/: Cargo.toml
atp-application/cli/: Cargo.toml
atp-application/cli/src/: config.rs  main.rs
atp-application/cli/src/commands/: command.rs  common.rs  db.rs  host.rs  keyboard.rs  mod.rs  mouse.rs  output.rs  powershell.rs  report.rs  scenario.rs  vdi.rs
atp-application/http-api/: Cargo.toml
atp-application/http-api/src/: main.rs
atp-application/scenarios/: Cargo.toml
atp-application/scenarios/src/: lib.rs
atp-common/: Cargo.toml
atp-common/src/: lib.rs
atp-core/: Cargo.toml
atp-core/.backup/orchestrator-20251201/src/: adapter.rs  lib.rs
atp-core/.backup/orchestrator-20251201/tests/: orchestrator_tests.rs
atp-core/executor/: Cargo.toml
atp-core/executor/examples/: basic_executor.rs  fetch_swagger.rs  probe_vdi_api.rs  test_admin_login.rs  test_connectivity.rs  test_real_vdi_api.rs  test_vdi_login_debug.rs  vdi_libvirt_integration.rs
atp-core/executor/examples/scenarios/: 01-basic-keyboard.yaml  02-command-execution.yaml  03-mouse-operations.yaml  04-mixed-protocols.yaml  05-error-handling.yaml  README.md  basic-keyboard-test.yaml  command-exec-test.yaml
atp-core/executor/src/: lib.rs  runner.rs  scenario.rs  spice_connector.rs  ssh_manager.rs  storage_ops.rs  test_config.rs  vdi_ops.rs
atp-core/executor/tests/: e2e_tests.rs  executor_tests.rs  spice_integration_tests.rs  test.toml.example
atp-core/gluster/: Cargo.toml
atp-core/gluster/src/: client.rs  error.rs  lib.rs  models.rs  parser.rs  pathinfo.rs
atp-core/orchestrator/: Cargo.toml
atp-core/orchestrator/src/: executor.rs  lib.rs  report.rs  scenario.rs
atp-core/protocol/: Cargo.toml
atp-core/protocol/examples/: spice_demo.rs  virtio_serial_example.rs
atp-core/protocol/src/: custom.rs  lib.rs  qga.rs  qmp.rs  registry.rs  traits.rs
atp-core/protocol/src/spice/: channel.rs  client.rs  constants.rs  discovery.rs  display.rs  inputs.rs  messages.rs  mod.rs  types.rs  usbredir.rs
atp-core/protocol/src/virtio/: channel.rs  mod.rs  protocol.rs
atp-core/protocol/tests/: protocol_tests.rs
atp-core/ssh-executor/: Cargo.toml
atp-core/ssh-executor/src/: client.rs  config.rs  error.rs  lib.rs
atp-core/storage/: Cargo.toml
atp-core/storage/migrations/: 001_initial.sql  002_vdi_sync.sql
atp-core/storage/src/: backup.rs  cache_manager.rs  connection.rs  error.rs  lib.rs  models.rs
atp-core/storage/src/repositories/: cascad_port_groups.rs  domains.rs  hosts.rs  mod.rs  ovs.rs  pools.rs  reports.rs  scenarios.rs  storage_pools.rs  storage_volumes.rs
atp-core/storage/tests/: integration_tests.rs
atp-core/transport/: Cargo.toml
atp-core/transport/src/: config.rs  connection.rs  lib.rs  manager.rs  pool.rs
atp-core/transport/tests/: config_tests.rs  types_tests.rs
atp-core/vdiplatform/: Cargo.toml
atp-core/vdiplatform/src/: client.rs  error.rs  lib.rs
atp-core/vdiplatform/src/api/: desk_pool.rs  domain.rs  event.rs  group.rs  host.rs  mod.rs  model.rs  network.rs  recycle.rs  snapshot.rs  storage.rs  user.rs
atp-core/vdiplatform/src/models/: mod.rs
atp-core/verification-server/: Cargo.toml  README.md
atp-core/verification-server/examples/: server.rs
atp-core/verification-server/src/: client.rs  lib.rs  server.rs  service.rs  types.rs
config/: atp.toml.example  controller.toml
docs/: ARCHITECTURE.md  CLI_VDI_COMMANDS.md  CONNECTION_MODES.md  CONNECTIVITY_TEST_GUIDE.md  DATABASE_IMPLEMENTATION.md  DATABASE_INTEGRATION_SUMMARY.md  DATABASE_USAGE_GUIDE.md  DATA_STORAGE_ANALYSIS.md  DEVELOPMENT.md  E2E_TESTING_GUIDE.md  E2E_TESTING_SUMMARY.md  EXECUTOR_ORCHESTRATOR_ANALYSIS.md  EXECUTOR_ORCHESTRATOR_MIGRATION_PLAN.md  GUEST_VERIFICATION_SERVER_DESIGN.md  GUEST_VERIFICATION_SUMMARY.md  LAYERED_ARCHITECTURE.md  MOUSE_OPERATIONS_GUIDE.md  OPTIMIZATION_SUGGESTIONS.md  Ocloud View 9.0接口文档_OpenAPI.json  Ocloud View接口文档.doc  PROJECT_COMPLETION_ANALYSIS.md  QGA_GUIDE.md  QUICKSTART.md  README.md  SPICE_MOUSE_INTEGRATION_SUMMARY.md  SPICE_PROTOCOL_IMPLEMENTATION.md  STAGE1_TRANSPORT_IMPLEMENTATION.md  STAGE2_PROTOCOL_IMPLEMENTATION.md  STAGE4_EXECUTOR_IMPLEMENTATION.md  STAGE5_CLI_IMPLEMENTATION.md  STAGE8_TESTING.md  TESTING_CONFIG_GUIDE.md  TEST_CONFIG_IMPLEMENTATION.md  TEST_CONFIG_IMPLEMENTATION_SUMMARY.md  USB_REDIRECTION_IMPLEMENTATION_GUIDE.md  VDI_API_DISCOVERY.md  VDI_LIBVIRT_INTEGRATION.md  VDI_LOGIN_API_GUIDE.md  VDI_PLATFORM_TESTING.md  VIRTIO_SERIAL_GUIDE.md  (+5 more)
docs/architecture/: cli-module-analysis.md
docs/archive/: ARCHITECTURE_UPDATE_SUMMARY.md  CONNECTIVITY_TEST_README.md  PROJECT_STRUCTURE_SUMMARY.md  REFACTORING_PLAN.md  VDI_CONNECTIVITY_TEST_SUMMARY.md  VDI_PLATFORM_TESTING_UPDATE.md
examples/scenarios/: comprehensive-test.yaml  keyboard-verification-test.yaml  mouse-click-test.yaml
guest-agent-native/: Cargo.toml
guest-agent-native/src/: main.rs
guest-agent-native/src/capture/: linux.rs  mod.rs  windows.rs
guest-agent-native/src/websocket/: mod.rs
guest-verifier/: Cargo.toml  README.md
guest-verifier/verifier-agent/: Cargo.toml
guest-verifier/verifier-agent/src/: main.rs
guest-verifier/verifier-agent/src/verifiers/: command.rs  keyboard.rs  mod.rs  mouse.rs
guest-verifier/verifier-core/: Cargo.toml
guest-verifier/verifier-core/src/: event.rs  lib.rs  transport.rs  verifier.rs
guest-verifier/verifier-core/src/transport/: mod.rs  tcp.rs  websocket.rs
test-controller/: Cargo.toml
test-controller/src/: main.rs
test-controller/src/keymapping/: layout.rs  mapper.rs  mod.rs
test-controller/src/libvirt/: manager.rs  mod.rs
test-controller/src/orchestrator/: mod.rs  orchestrator.rs
test-controller/src/qga/: client.rs  examples.rs  mod.rs  protocol.rs
test-controller/src/qmp/: client.rs  mod.rs  protocol.rs
test-controller/src/transport/: mod.rs
test-controller/src/vm_actor/: actor.rs  message.rs  mod.rs
(+12 files in other folders)
