[workspace]
members = [
    "cli",
    "http-api",
    "scenarios",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OCloudView ATP Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# 核心库
atp-transport = { path = "../atp-core/transport" }
atp-protocol = { path = "../atp-core/protocol" }
atp-executor = { path = "../atp-core/executor" }

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间
chrono = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
