[package]
name = "atp-common"
version = "0.1.0"
edition = "2021"
authors = ["OCloudView ATP Team"]
license = "MIT OR Apache-2.0"
description = "Common types for ATP verification system"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 使此 crate 独立于父工作区
[workspace]
