[workspace]
members = [
    "transport",
    "protocol",
    "executor",
    "vdiplatform",
    "orchestrator",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OCloudView ATP Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Libvirt 绑定
virt = { version = "0.4", features = ["qemu"] }

# 时间
chrono = "0.4"

# 异步 trait
async-trait = "0.1"
