[workspace]
members = [
    "verifier-core",
    "verifier-agent",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OCloudView ATP Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# 异步 trait
async-trait = "0.1"

# CLI
clap = { version = "4.4", features = ["derive"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }
