[package]
name = "test-controller"
version = "0.1.0"
edition = "2021"
authors = ["OCloudView ATP Team"]
description = "虚拟机输入自动化测试控制端"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Libvirt 绑定
virt = "0.4"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket (用于与 Guest Agent 通信)
tokio-tungstenite = "0.21"

# XML 解析 (用于解析 Libvirt XML)
quick-xml = { version = "0.31", features = ["serialize"] }

# 异步通道
async-channel = "2.1"

# 时间处理
chrono = "0.4"

[dev-dependencies]
mockall = "0.12"
