[package]
name = "atp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ATP CLI - 命令行工具"

[[bin]]
name = "atp"
path = "src/main.rs"

[dependencies]
# 核心库
atp-transport = { workspace = true }
atp-protocol = { workspace = true }
atp-executor = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI 框架
clap = { workspace = true }

# 美化输出
colored = "2.1"
indicatif = "0.17"

# 配置文件
toml = "0.8"
dirs = "5.0"
