[package]
name = "atp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ATP CLI - 命令行工具"

[[bin]]
name = "atp"
path = "src/main.rs"

[dependencies]
# 核心库
atp-transport = { workspace = true }
atp-protocol = { workspace = true }
atp-executor = { workspace = true }
atp-storage = { path = "../../atp-core/storage" }  # 数据库支持

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }  # 时间处理
serde_yaml = "0.9"  # YAML 支持

# CLI 框架
clap = { workspace = true }

# 美化输出
colored = "2.1"
indicatif = "0.17"

# 配置文件
toml = "0.8"
dirs = "5.0"
shellexpand = "3.1"

# HTTP 客户端 (用于 VDI API)
reqwest = { version = "0.11", features = ["json", "multipart"] }
md5 = "0.7"

# Libvirt 支持 (用于 VDI 验证)
virt = { version = "0.4", features = ["qemu"] }
