[package]
name = "atp-http-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ATP HTTP API - RESTful API 服务"

[[bin]]
name = "atp-api"
path = "src/main.rs"

[dependencies]
# 核心库
atp-transport = { workspace = true }
atp-protocol = { workspace = true }
atp-executor = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP 框架
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# 配置
config = "0.13"
