[package]
name = "atp-scenarios"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ATP 测试场景库"

[dependencies]
# 核心库
atp-transport = { workspace = true }
atp-protocol = { workspace = true }
atp-executor = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# YAML 支持
serde_yaml = "0.9"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
