[package]
name = "atp-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心模块
atp-vdiplatform = { path = "../vdiplatform" }
atp-transport = { path = "../transport" }
atp-protocol = { path = "../protocol" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 其他工具
uuid = { version = "1.0", features = ["v4", "serde"] }
