[package]
name = "atp-ssh-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "ATP SSH 执行器 - 使用系统 ssh/sshpass 命令执行远程命令"

[dependencies]
# 异步运行时
tokio = { workspace = true, features = ["process"] }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 序列化
serde = { workspace = true }

# 时间（用于超时配置序列化）
humantime-serde = "1"

# 路径处理
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
