[package]
name = "atp-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# SQLite 数据库
sqlx = { version = "0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
    "json",
    "migrate"
] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"

# 路径展开
shellexpand = "3.1"

[dev-dependencies]
tokio-test = "0.4"
futures-util = "0.3"
tempfile = "3.8"
