[package]
name = "atp-vdiplatform"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"

# 其他工具
url = "2.5"
