[package]
name = "verification-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Guest 验证器服务端 - 接收验证结果并匹配"

[dependencies]
# 异步运行时
tokio = { workspace = true, features = ["full"] }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 异步 trait
async-trait = { workspace = true }

# UUID
uuid = { workspace = true, features = ["v4", "serde"] }

# WebSocket
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# 时间
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
